// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Center aligment should render with center alignment styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.circuit-0 > li:not(:last-of-type) {
  margin-right: 16px;
}

@media (max-width:479px) {
  .circuit-0 {
    display: block;
  }

  .circuit-0 > li {
    width: 100%;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 16px;
  }

  .circuit-0 > li > * {
    width: 100%;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;

exports[`ButtonGroup Left aligment should render with left alignment styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.circuit-0 > li:not(:last-of-type) {
  margin-right: 16px;
}

@media (max-width:479px) {
  .circuit-0 {
    display: block;
  }

  .circuit-0 > li {
    width: 100%;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 16px;
  }

  .circuit-0 > li > * {
    width: 100%;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;

exports[`ButtonGroup No margin bottom should render without margin bottom styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.circuit-0 > li:not(:last-of-type) {
  margin-right: 16px;
}

@media (max-width:479px) {
  .circuit-0 {
    display: block;
  }

  .circuit-0 > li {
    width: 100%;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 16px;
  }

  .circuit-0 > li > * {
    width: 100%;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;

exports[`ButtonGroup should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: hidden;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.circuit-0 > li:not(:last-of-type) {
  margin-right: 16px;
}

@media (max-width:479px) {
  .circuit-0 {
    display: block;
  }

  .circuit-0 > li {
    width: 100%;
  }

  .circuit-0 > li:not(:last-of-type) {
    margin-bottom: 16px;
  }

  .circuit-0 > li > * {
    width: 100%;
  }
}

<ul
  className="circuit-0 circuit-1"
/>
`;
